@@ -3,6 +3,7 @@ Kiwix 0.9 beta6
 * FIXED: Evolution skin (ID: 3444112)
 * FIXED: Introduce aria2 v1.14 for better aria2c process mgmt. (ID: 3430225)
 * FIXED: Invisible menuitems icons on GNU/Linux
+* FIXED: Blanck 404 error page server by kiwix-serve (ID: 3417227)
 * NEW: New supported user interface languages: Georgian (ka), Estonian (et), 
   Bulgarian (bg), Faroese (fo), Croatian (hr), Iloko (ilo), Limburgish (li), 
   Lithuanian (lt), Basa Banyumasan (map-bms), Oriya (or), Pashto (ps), 
